--- a/src/components/headPage/HeadPage.module.scss
+++ b/src/components/headPage/HeadPage.module.scss
@@ -2,9 +2,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 88vh;
+  height: 110vh;
   width: 100vw;
-  background-color: #0e0d12;
+  /*background-color: #0e0d12;*/
+  background-color: rgb(5%, 5%, 7%);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -16,52 +17,71 @@
     justify-self: center;
     grid-template-rows: 1fr 1fr;
     grid-gap: 2vw;
-    background-color: indigo;
     max-width: 1200px;
     width: 100%;
     height: 80%;
 
     .rowNav {
-      background-color: aqua;
       display: grid;
       /*grid-template-rows: 1fr 2fr;*/
       grid-template-columns: 1fr 2fr;
       grid-gap: 2vw;
 
       .menu {
-        background-color: #ff6000;
+        background-color: #1f1f1d;
       }
 
       .ad {
-        background-color: green;
       }
 
     }
 
     .rowAd {
-      background-color: red;
+      font-family: 'Oswald', sans-serif;
+      color: #ffffff;
+
       display: grid;
       grid-template-columns: 3fr 2fr;
       grid-gap: 2vw;
 
       .instruction {
-        background-color: gold;
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         /*opacity: 1;*/
 
         .title {
-          font-family: 'Oswald', sans-serif;
           text-transform: uppercase;
-          color: #ffffff;
           font-size: 3em;
           font-weight: 500;
         }
+
+        .cont {
+          height: 50%;
+          width: 50%;
+          margin: 25px 25px;
+        }
       }
 
-      .twoAd {
-        background-color: black;
+      .ammunition {
+
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+
+        & p {
+          height: 50%;
+          width: 50%;
+          margin: 25px 25px;
+          font-size: 1.875em;
+          font-weight: 500;
+          text-transform: uppercase;
+        }
+
+        &:hover {
+          color: #ff6000;
+          cursor: pointer;
+        }
       }
     }
   }
