added title component, created product area

--- a/src/components/button/Button.module.scss
+++ b/src/components/button/Button.module.scss
@@ -1,4 +1,4 @@
-button {
+.btnWpar {
   background-color: #ff6000;
   width: max-content;
   text-transform: uppercase;
@@ -6,7 +6,7 @@ button {
   overflow: hidden;
   border: none;
   cursor: pointer;
-  padding: 10px 20px;
+  padding: 12px 25px;
   border-radius: 5px;
   position: relative;
   font-size: 12px;
