--- a/src/components/headPage/HeadPage.module.scss
+++ b/src/components/headPage/HeadPage.module.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 110vh;
-  width: 100vw;
+  width: 100%;
   /*background-color: #0e0d12;*/
   background-color: rgb(5%, 5%, 7%);
   background-size: cover;
