made switching between login and registration

--- a/src/components/loginModal/Login/Login.module.scss
+++ b/src/components/loginModal/Login/Login.module.scss
@@ -47,6 +47,7 @@
     }
     .btnWrap {
       display: flex;
+      justify-content: space-between;
       margin: 30px 0;
       width: 100%;
     }
