--- a/src/components/loginModal/Register/Register.module.scss
+++ b/src/components/loginModal/Register/Register.module.scss
@@ -33,6 +33,11 @@
     input {
       margin-right: 15px;
     }
+
+    a {
+      text-decoration: none;
+      color: #ff6000;
+    }
   }
 
   p {
