--- a/src/components/loginModal/LoginPage.module.scss
+++ b/src/components/loginModal/LoginPage.module.scss
@@ -13,8 +13,10 @@
   .choose {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     max-width: 500px;
     width: 100%;
+    height: 60px;
     background-color: #d7d7d7;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
@@ -24,20 +26,34 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      height: 100%;
+      width: 100%;
+      border: 1px solid #0e0d12;
       border-radius: 5px 0 0 5px;
-      width: 50%;
-      border: 1px solid black;
     }
 
     .regArea {
       display: flex;
       justify-content: center;
       align-items: center;
-      border-radius: 5px;
-      padding: 15px 0;
-      width: 50%;
+      height: 100%;
+      width: 100%;
+      border: 1px solid #0e0d12;
+    }
+
+    .close {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      padding: 0 10px;
+      background-color: #0e0d12;
+      border-radius: 0 5px 5px 0;
+    }
+
+    .notActive {
       opacity: 0.5;
+      border: none
     }
   }
 }
-
