create uuid, riflesPage

--- a/src/components/loginModal/Login/Login.module.scss
+++ b/src/components/loginModal/Login/Login.module.scss
@@ -39,6 +39,10 @@
         margin-right: 30px;
         text-decoration: none;
         color: #ff6000;
+
+        &:hover {
+          text-decoration: underline;
+        }
       }
 
       input {
