--- a/src/components/itemList/ItemList.module.scss
+++ b/src/components/itemList/ItemList.module.scss
@@ -13,6 +13,7 @@
     font-weight: 600;
     padding-left: 1em;
     cursor: pointer;
+    text-decoration: none;
 
     &:hover {
       color: #ff6000;
